--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
                 <div class="funciones">
                     <nav class="lista__funciones">
                         <ul class="otras__funciones">
+                            <li class="brand" id="calculadora">GuilloTech</i></li>
                             <li class="lista__accesos" id="calculadora">
                                 <i class="fas fa-calculator"></i>
                             </li>
-                            <li class="brand" id="calculadora">GuilloTech</i></li>
-                            <!-- <li class="lista__accesos" id="conversor"><i class="fas fa-exchange-alt"></i></li>
-                            <li class="lista__accesos" id="cambio__dinero"><i class="fas fa-coins"></i></li> -->
+                            <li class="lista__accesos" id="conversor"><i class="fas fa-exchange-alt"></i></li>
+                            <li class="lista__accesos" id="cambio__dinero"><i class="fas fa-coins"></i></li>
                         </ul>
                     </nav>
                 </div>
